Responsive ISSUE Trimly | Beta
Trimly Responsive not showing Fixed

--- a/demo/fiverr/trimly/assets/sass/responsive.scss
+++ b/demo/fiverr/trimly/assets/sass/responsive.scss
@@ -1,9 +1,5 @@
-/* Medium Layout: 1280px. */
-@media only screen and (min-width: 992px) and (max-width: 1200px) { 
-  
-    
-}
-/* Tablet Layout: 768px. */
+
+
 @media only screen and (min-width: 768px) and (max-width: 991px) { 
  	// Header
     .header-area {
@@ -86,7 +82,9 @@
     }
     
 }
-/* Mobile Layout: 320px. */
+
+
+
 @media only screen and (max-width: 767px) { 
  	// header
  	// Header
@@ -245,8 +243,4 @@
     .subscription .form-group input {
     	width: 300px
     }
-}
-/* Wide Mobile Layout: 480px. */
-@media only screen and (min-width: 480px) and (max-width: 767px) { 
-
 }
